--- a/html/welcome.html
+++ b/html/welcome.html
@@ -54,10 +54,11 @@
 								</header>
 								<span class="image right"><img src="../images/screenshot.png" alt=""></span>
 								<p>The plugin is very simple to use. Just visit your Mint overview page to automatically initiate a sync. If you have not performed a sync before, you will be directed to set up the item in Mint to track your Robinhood portfolio to.</p>
-								<p>You can manually perform a sync by clicking the icon in the Chrome toolbar or menu.</p>
+								<p>You can also adjust settings for the plugin by viewing the <a target="_blank" href="settings.html">settings page</a>.</p>
 								<footer class="major">
 									<ul class="actions">
 										<li><a href="https://mint.intuit.com/overview.event" target="_blank" class="button primary">Perform sync now</a></li>
+										<li><a href="settings.html" target="_blank" class="button">Change Settings</a></li>
 									</ul>
 								</footer>
 							</section>
