--- a/html/welcome.html
+++ b/html/welcome.html
@@ -52,7 +52,7 @@
 								<header class="major">
 									<h2>How to use the plugin</h2>
 								</header>
-								<span class="image right"><img src="../images/screenshot.png" alt=""></span>
+								<span class="image right"><img src="../images/screenshot1.png" alt=""></span>
 								<p>The plugin is very simple to use. Just visit your Mint overview page to automatically initiate a sync. If you have not performed a sync before, you will be directed to set up the item in Mint to track your Robinhood portfolio to.</p>
 								<p>You can also adjust settings for the plugin by viewing the <a target="_blank" href="settings.html">settings page</a>.</p>
 								<footer class="major">
