--- a/html/changelog.html
+++ b/html/changelog.html
@@ -36,7 +36,7 @@
 										<header class="major">
 											<h2>What's new in this release</h2>
 										</header>
-										<p>This release introduces the <a href="welcome.html">welcome page</a> and changelog.</p>
+										<p>This release includes minor bug fixes.</p>
 									</div>
 								</div>
 							</section>
@@ -47,8 +47,12 @@
 									<h2>Version History</h2>
 								</header>
 								<aside class="version">
+									<h4>Version 1.1.1</h4>
+									<p>Fixed analytics. Fixed appearance of notifications.</p>
+								</aside>
+								<aside class="version">
 									<h4>Version 1.1.0</h4>
-									<p>Introduced help page.</p>
+									<p>Introduced welcome page and changelog.</p>
 								</aside>
 								<aside class="version">
 									<h4>Version 1.0.0</h4>
