--- a/html/welcome.html
+++ b/html/welcome.html
@@ -95,8 +95,8 @@
 						<section>
 							<h2>Version History</h2>
 							<aside class="version">
-								<h4>Version 1.1.0</h4>
-								<p>Introduced help page.</p>
+								<h4>Version 1.1.1</h4>
+								<p>Minor bug fixes.</p>
 							</aside>
 
 							<ul class="actions">
@@ -106,8 +106,8 @@
 						<section>
 							<h2>&nbsp;</h2>
 							<aside class="version">
-								<h4>Version 1.0.0</h4>
-								<p>This was the initial release of the plugin. It was mostly a proof-of-concept.</p>
+								<h4>Version 1.1.0</h4>
+								<p>Introduced welcome page and changelog.</p>
 							</aside>
 						</section>
 						<p class="copyright">Site layout based on template by <a href="https://html5up.net">HTML5 UP</a> (Used under <a href="https://creativecommons.org/licenses/by/3.0/">CCA 3.0 license</a>).</p>
