Updates should display changelog rather than welcome.
Welcome now only displays on first run.

--- a/html/settings.html
+++ b/html/settings.html
@@ -31,11 +31,11 @@
 					<div id="main">
 							<section id="first" class="main">
 								<header class="major">
-									<h2>Welcome Page</h2>
+									<h2>Changelog</h2>
 								</header>
-								<p>Toggle this setting off to turn off the welcome page on plugin updates. This welcome page shows information about the new features and changes introduced with the update.</p>
-								<input type="checkbox" id="setting-welcomeOnUpdate" name="setting-welcomeOnUpdate">
-								<label for="setting-welcomeOnUpdate">Display welcome page on update</label>
+								<p>Toggle this setting off to turn off the changelog page on plugin updates. This changelog shows information about the new features and changes introduced with the update.</p>
+								<input type="checkbox" id="setting-changelogOnUpdate" name="setting-changelogOnUpdate">
+								<label for="setting-changelogOnUpdate">Display changelog on update</label>
 							</section>
 							<section id="second" class="main">
 								<header class="major">
@@ -49,10 +49,8 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-
-						<p class="copyright">Site layout based on template by <a href="https://html5up.net">HTML5 UP</a> (Used under <a href="https://creativecommons.org/licenses/by/3.0/">CCA 3.0 license</a>).</p>
+							<p class="copyright"><a href="licenses.html">View extension and third-party licenses</a></p>
 					</footer>
-
 			</div>
 
 		<!-- Scripts -->
