Sort external resources

--- a/html/settings.html
+++ b/html/settings.html
@@ -54,11 +54,11 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="../js/external/jquery.min.js"></script>
-			<script src="../js/external/jquery.scrollex.min.js"></script>
-			<script src="../js/external/jquery.scrolly.min.js"></script>
-			<script src="../js/external/browser.min.js"></script>
-			<script src="../js/external/breakpoints.min.js"></script>
+			<script src="../js/external/jquery/jquery.min.js"></script>
+			<script src="../js/external/ajlkn/jquery.scrollex.min.js"></script>
+			<script src="../js/external/ajlkn/jquery.scrolly.min.js"></script>
+			<script src="../js/external/ajlkn/browser.min.js"></script>
+			<script src="../js/external/ajlkn/breakpoints.min.js"></script>
 			<script src="../js/external/stellar/util.js"></script>
 			<script src="../js/external/stellar/main.js"></script>
 			<script src="../js/settings.js"></script>
