Add licenses page

--- a/html/changelog.html
+++ b/html/changelog.html
@@ -63,8 +63,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-
-						<p class="copyright">Site layout based on template by <a href="https://html5up.net">HTML5 UP</a> (Used under <a href="https://creativecommons.org/licenses/by/3.0/">CCA 3.0 license</a>).</p>
+						<p class="copyright"><a href="licenses.html">View extension and third-party licenses</a></p>
 					</footer>
 
 			</div>
