Prepare for 1.1.2 release

--- a/html/changelog.html
+++ b/html/changelog.html
@@ -36,9 +36,20 @@
 										<header class="major">
 											<h2>What's new in this release</h2>
 										</header>
-										<p>This release includes minor bug fixes.</p>
+										<p>This release includes minor bug fixes and a new licenses page.</p>
 									</div>
 								</div>
+								<ul class="actions special">
+									<li><a href="licenses.html" class="button primary">View Licenses</a></li>
+								</ul>
+							</section>
+							<section id="changelogPrompt" class="main special">
+								 <header class="minor">
+ 									<h2>Don't want to see the changelog on updates?</h2>
+ 								</header>
+ 								<ul class="actions special">
+ 									<li><a href="settings.html" class="button">Turn them off</a></li>
+ 								</ul>
 							</section>
 
 						<!-- First Section -->
@@ -46,6 +57,10 @@
 								<header class="major">
 									<h2>Version History</h2>
 								</header>
+								<aside class="version">
+									<h4>Version 1.1.2</h4>
+									<p>Removed Fontawesome and overlay.png reference. Added licenses page. Changed update popup to changelog instead of welcome page. Welcome page now only shows on first install, and when the button is pressed in the Chrome toolbar or menu.</p>
+								</aside>
 								<aside class="version">
 									<h4>Version 1.1.1</h4>
 									<p>Fixed analytics. Fixed appearance of notifications.</p>
