--- a/html/welcome.html
+++ b/html/welcome.html
@@ -95,10 +95,9 @@
 						<section>
 							<h2>Version History</h2>
 							<aside class="version">
-								<h4>Version 1.1.1</h4>
-								<p>Minor bug fixes.</p>
+								<h4>Version 1.1.2</h4>
+								<p>Minor bug fixes. Created licenses page.</p>
 							</aside>
-
 							<ul class="actions">
 								<li><a href="changelog.html" class="button">View Full Changelog</a></li>
 							</ul>
@@ -106,8 +105,8 @@
 						<section>
 							<h2>&nbsp;</h2>
 							<aside class="version">
-								<h4>Version 1.1.0</h4>
-								<p>Introduced welcome page and changelog.</p>
+								<h4>Version 1.1.1</h4>
+								<p>Minor bug fixes.</p>
 							</aside>
 						</section>
 						<p class="copyright"><a href="licenses.html">View extension and third-party licenses</a></p>
