Fix underline on notification hover, bump version number

--- a/html/changelog.html
+++ b/html/changelog.html
@@ -58,6 +58,10 @@
 									<h2>Version History</h2>
 								</header>
 								<aside class="version">
+									<h4>Version 1.1.3</h4>
+									<p>Improved notification styles. </p>
+								</aside>
+								<aside class="version">
 									<h4>Version 1.1.2</h4>
 									<p>Removed Fontawesome and overlay.png reference. Added licenses page. Changed update popup to changelog instead of welcome page. Welcome page now only shows on first install, and when the button is pressed in the Chrome toolbar or menu.</p>
 								</aside>
