--- a/html/changelog.html
+++ b/html/changelog.html
@@ -48,7 +48,7 @@
  									<h2>Don't want to see the changelog on updates?</h2>
  								</header>
  								<ul class="actions special">
- 									<li><a href="settings.html" class="button">Turn them off</a></li>
+ 									<li><a href="settings.html" class="button">Turn it off</a></li>
  								</ul>
 							</section>
 
@@ -59,7 +59,7 @@
 								</header>
 								<aside class="version">
 									<h4>Version 1.1.3</h4>
-									<p>Improved notification styles. </p>
+									<p>Improved notification styles. Fixed grammar on changelog.</p>
 								</aside>
 								<aside class="version">
 									<h4>Version 1.1.2</h4>
