--- a/html/changelog.html
+++ b/html/changelog.html
@@ -59,7 +59,7 @@
 								</header>
 								<aside class="version">
 									<h4>Version 1.1.3</h4>
-									<p>Improved notification styles. Fixed grammar on changelog.</p>
+									<p>Improved notification styles. Fixed grammar on changelog. Fix analytics console error when disabled.</p>
 								</aside>
 								<aside class="version">
 									<h4>Version 1.1.2</h4>
