Handle Mint not being logged in

--- a/html/changelog.html
+++ b/html/changelog.html
@@ -59,7 +59,7 @@
 								</header>
 								<aside class="version">
 									<h4>Version 1.1.3</h4>
-									<p>Improved notification styles. Fixed grammar on changelog. Fix analytics console error when disabled. Add a prompt when Robinhood is not logged in, and fix frozen page.</p>
+									<p>Improved notification styles. Fixed grammar on changelog. Fix analytics console error when disabled. Add a prompt when Robinhood is not logged in, and fix frozen page. Handle when Mint is not logged in.</p>
 								</aside>
 								<aside class="version">
 									<h4>Version 1.1.2</h4>
