--- a/html/changelog.html
+++ b/html/changelog.html
@@ -36,12 +36,9 @@
 										<header class="major">
 											<h2>What's new in this release</h2>
 										</header>
-										<p>This release includes minor bug fixes and a new licenses page.</p>
+										<p>This release includes minor bug fixes. The plugin now detects when you are not logged in to Mint or Robinhood and handles it better.</p>
 									</div>
 								</div>
-								<ul class="actions special">
-									<li><a href="licenses.html" class="button primary">View Licenses</a></li>
-								</ul>
 							</section>
 							<section id="changelogPrompt" class="main special">
 								 <header class="minor">
