--- a/html/welcome.html
+++ b/html/welcome.html
@@ -50,7 +50,7 @@
 						<!-- First Section -->
 							<section id="first" class="main">
 								<header class="major">
-									<h2>How to use the plugin</h2>
+									<h2>How to use the extension</h2>
 								</header>
 								<span class="image right"><img src="../images/screenshot1.png" alt=""></span>
 								<p>The plugin is very simple to use. Just visit your Mint overview page to automatically initiate a sync. If you have not performed a sync before, you will be directed to set up the item in Mint to track your Robinhood portfolio to.</p>
