Setup GitHub Pages

--- a/changelog.html
+++ b/changelog.html
@@ -4,8 +4,8 @@
 		<title>Robinhood Mint Sync for Chrome - Changelog</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="../css/stellar.css" />
-		<noscript><link rel="stylesheet" href="../css/stellar-noscript.css" /></noscript>
+		<link rel="stylesheet" href="css/stellar.css" />
+		<noscript><link rel="stylesheet" href="css/stellar-noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
@@ -39,14 +39,6 @@
 										<p>This release includes minor bug fixes. The plugin now detects when you are not logged in to Mint or Robinhood and handles it better.</p>
 									</div>
 								</div>
-							</section>
-							<section id="changelogPrompt" class="main special">
-								 <header class="minor">
- 									<h2>Don't want to see the changelog on updates?</h2>
- 								</header>
- 								<ul class="actions special">
- 									<li><a href="settings.html" class="button">Turn it off</a></li>
- 								</ul>
 							</section>
 
 						<!-- First Section -->
@@ -85,13 +77,13 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="../js/external/jquery/jquery.min.js"></script>
-			<script src="../js/external/ajlkn/jquery.scrollex.min.js"></script>
-			<script src="../js/external/ajlkn/jquery.scrolly.min.js"></script>
-			<script src="../js/external/ajlkn/browser.min.js"></script>
-			<script src="../js/external/ajlkn/breakpoints.min.js"></script>
-			<script src="../js/external/stellar/util.js"></script>
-			<script src="../js/external/stellar/main.js"></script>
+			<script src="js/external/jquery/jquery.min.js"></script>
+			<script src="js/external/ajlkn/jquery.scrollex.min.js"></script>
+			<script src="js/external/ajlkn/jquery.scrolly.min.js"></script>
+			<script src="js/external/ajlkn/browser.min.js"></script>
+			<script src="js/external/ajlkn/breakpoints.min.js"></script>
+			<script src="js/external/stellar/util.js"></script>
+			<script src="js/external/stellar/main.js"></script>
 
 	</body>
 </html>
