--- a/licenses.html
+++ b/licenses.html
@@ -4,8 +4,8 @@
 		<title>Robinhood Mint Sync for Chrome - Licenses</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="../css/stellar.css" />
-		<noscript><link rel="stylesheet" href="../css/stellar-noscript.css" /></noscript>
+		<link rel="stylesheet" href="css/stellar.css" />
+		<noscript><link rel="stylesheet" href="css/stellar-noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
@@ -681,13 +681,13 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="../js/external/jquery/jquery.min.js"></script>
-			<script src="../js/external/ajlkn/jquery.scrollex.min.js"></script>
-			<script src="../js/external/ajlkn/jquery.scrolly.min.js"></script>
-			<script src="../js/external/ajlkn/browser.min.js"></script>
-			<script src="../js/external/ajlkn/breakpoints.min.js"></script>
-			<script src="../js/external/stellar/util.js"></script>
-			<script src="../js/external/stellar/main.js"></script>
+			<script src="js/external/jquery/jquery.min.js"></script>
+			<script src="js/external/ajlkn/jquery.scrollex.min.js"></script>
+			<script src="js/external/ajlkn/jquery.scrolly.min.js"></script>
+			<script src="js/external/ajlkn/browser.min.js"></script>
+			<script src="js/external/ajlkn/breakpoints.min.js"></script>
+			<script src="js/external/stellar/util.js"></script>
+			<script src="js/external/stellar/main.js"></script>
 
 	</body>
 </html>
