--- a/licenses.html
+++ b/licenses.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="css/stellar.css" />
+		<link rel="icon" type="image/png" href="images/icon128.png">
 		<noscript><link rel="stylesheet" href="css/stellar-noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
