Replace "plugin" with "extension"

--- a/html/changelog.html
+++ b/html/changelog.html
@@ -36,7 +36,7 @@
 										<header class="major">
 											<h2>What's new in this release</h2>
 										</header>
-										<p>This release includes minor bug fixes. The plugin now detects when you are not logged in to Mint or Robinhood and handles it better.</p>
+										<p>This release includes minor bug fixes. The extension now detects when you are not logged in to Mint or Robinhood and handles it better.</p>
 									</div>
 								</div>
 							</section>
@@ -72,7 +72,7 @@
 								</aside>
 								<aside class="version">
 									<h4>Version 1.0.0</h4>
-									<p>This was the initial release of the plugin. It was mostly a proof-of-concept.</p>
+									<p>This was the initial release of the extension. It was mostly a proof-of-concept.</p>
 								</aside>
 							</section>
 					</div>
