--- a/html/settings.html
+++ b/html/settings.html
@@ -33,7 +33,7 @@
 								<header class="major">
 									<h2>Changelog</h2>
 								</header>
-								<p>Toggle this setting off to turn off the changelog page on plugin updates. This changelog shows information about the new features and changes introduced with the update.</p>
+								<p>Toggle this setting off to turn off the changelog page on extension updates. This changelog shows information about the new features and changes introduced with the update.</p>
 								<input type="checkbox" id="setting-changelogOnUpdate" name="setting-changelogOnUpdate">
 								<label for="setting-changelogOnUpdate">Display changelog on update</label>
 							</section>
@@ -41,7 +41,7 @@
 								<header class="major">
 									<h2>Analytics</h2>
 								</header>
-								<p>This plugin sends analytics on usage including the time it takes for a sync to complete, when the plugin is being used, and how long users ineract with the plugin's pages. You can turn this tracking off using this setting. You must restart your browser for the change to take effect.</p>
+								<p>This extension sends analytics on usage including the time it takes for a sync to complete, when the extension is being used, and how long users ineract with the extension's pages. You can turn this tracking off using this setting. You must restart your browser for the change to take effect.</p>
 								<input type="checkbox" id="setting-disableAnalytics" name="setting-disableAnalytics">
 								<label for="setting-disableAnalytics">Disable analytics</label>
 							</section>
