--- a/html/welcome.html
+++ b/html/welcome.html
@@ -53,8 +53,8 @@
 									<h2>How to use the extension</h2>
 								</header>
 								<span class="image right"><img src="../images/screenshot1.png" alt=""></span>
-								<p>The plugin is very simple to use. Just visit your Mint overview page to automatically initiate a sync. If you have not performed a sync before, you will be directed to set up the item in Mint to track your Robinhood portfolio to.</p>
-								<p>You can also adjust settings for the plugin by viewing the <a target="_blank" href="settings.html">settings page</a>.</p>
+								<p>The extension is very simple to use. Just visit your Mint overview page to automatically initiate a sync. If you have not performed a sync before, you will be directed to set up the item in Mint to track your Robinhood portfolio to.</p>
+								<p>You can also adjust settings for the extension by viewing the <a target="_blank" href="settings.html">settings page</a>.</p>
 								<footer class="major">
 									<ul class="actions">
 										<li><a href="https://mint.intuit.com/overview.event" target="_blank" class="button primary">Perform sync now</a></li>
@@ -68,11 +68,11 @@
 								<header class="major">
 									<h2>Frequently Asked Questions</h2>
 								</header>
-								<h2>How does the plugin work?</h3>
-								<p>The plugin works by opening your Robinhood Account page in the background to read the portfolio value. After reading that value, it passes it to Mint in another new page in the background. Both of these background pages will close automatically when they are done with their job. You may switch to these pages while the sync is being performed, but if they are closed the sync will not complete.</p>
-								<p>Due to how the extension gets data from Robinhood and inputs data into Mint, it is possible for changes in either of these services to break the functionality of the plugin. If you have any issues with the plugin, see the <a href="#cta">Reporting a Problem</a> section below.</p>
+								<h2>How does the extension work?</h3>
+								<p>The extension works by opening your Robinhood Account page in the background to read the portfolio value. After reading that value, it passes it to Mint in another new page in the background. Both of these background pages will close automatically when they are done with their job. You may switch to these pages while the sync is being performed, but if they are closed the sync will not complete.</p>
+								<p>Due to how the extension gets data from Robinhood and inputs data into Mint, it is possible for changes in either of these services to break the functionality of the extension. If you have any issues with the extension, see the <a href="#cta">Reporting a Problem</a> section below.</p>
 								<h2>How do I know my information is safe?</h2>
-								<p>This plugin is completely open source and its code is available on GitHub. This means anybody can <a href="https://github.com/pkmnct/robinhood-mint-sync-chrome">review the code</a> and confirm that it is safe.</p>
+								<p>This extension is completely open source and its code is available on GitHub. This means anybody can <a href="https://github.com/pkmnct/robinhood-mint-sync-chrome">review the code</a> and confirm that it is safe.</p>
 							</section>
 
 						<!-- Get Started -->
@@ -80,7 +80,7 @@
 								<header class="major">
 									<h2>Reporting a Problem</h2>
 								</header>
-								<p>If you run into any issues with the plugin, please <a href="https://github.com/pkmnct/robinhood-mint-sync-chrome/issues">check to see if any other people are having the same issue</a> on GitHub. If they are not, please open a new issue. Describe in detail the problem you are having when reporting an issue.</p>
+								<p>If you run into any issues with the extension, please <a href="https://github.com/pkmnct/robinhood-mint-sync-chrome/issues">check to see if any other people are having the same issue</a> on GitHub. If they are not, please open a new issue. Describe in detail the problem you are having when reporting an issue.</p>
 								<footer class="major">
 									<ul class="actions">
 										<li><a href="https://github.com/pkmnct/robinhood-mint-sync-chrome/issues" target="_blank" class="button primary">View Known Issues</a></li>
