--- a/html/changelog.html
+++ b/html/changelog.html
@@ -36,7 +36,7 @@
 										<header class="major">
 											<h2>What's new in this release</h2>
 										</header>
-										<p>This release includes minor bug fixes. The extension now detects when you are not logged in to Mint or Robinhood and handles it better.</p>
+										<p>This release is a bug fix for notification buttons not working.</p>
 									</div>
 								</div>
 							</section>
@@ -54,6 +54,10 @@
 								<header class="major">
 									<h2>Version History</h2>
 								</header>
+								<aside class="version">
+									<h4>Version 1.2.0</h4>
+									<p>Switched notifications to use a new library. This fixes issues with notification buttons.</p>
+								</aside>
 								<aside class="version">
 									<h4>Version 1.1.3</h4>
 									<p>Improved notification styles. Fixed grammar on changelog. Fix analytics console error when disabled. Add a prompt when Robinhood is not logged in, and fix frozen page. Handle when Mint is not logged in.</p>
