--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
 						<section>
 							<h2>Version History</h2>
 							<aside class="version">
-								<h4>Version 1.1.3</h4>
-								<p>Minor bug fixes. Detect when not logged in.</p>
+								<h4>Version 1.2.0</h4>
+								<p>This release is a bug fix for notification buttons not working.</p>
 							</aside>
 							<ul class="actions">
 								<li><a href="changelog.html" class="button">View Full Changelog</a></li>
@@ -131,8 +131,8 @@
 						<section>
 							<h2>&nbsp;</h2>
 							<aside class="version">
-								<h4>Version 1.1.2</h4>
-								<p>Minor bug fixes. Created licenses page.</p>
+								<h4>Version 1.1.3</h4>
+								<p>Minor bug fixes. Detect when not logged in.</p>
 							</aside>
 						</section>
 						<p class="copyright"><a href="licenses.html">View extension and third-party licenses</a></p>
