--- a/html/welcome.html
+++ b/html/welcome.html
@@ -103,14 +103,11 @@
 							</ul>
 						</section>
 						<section>
-							<h2>Version History</h2>
+							<h2>&nbsp;</h2>
 							<aside class="version">
 								<h4>Version 1.1.3</h4>
 								<p>Minor bug fixes. Detect when not logged in.</p>
 							</aside>
-							<ul class="actions">
-								<li><a href="changelog.html" class="button">View Full Changelog</a></li>
-							</ul>
 						</section>
 						<p class="copyright"><a href="licenses.html">View extension and third-party licenses</a></p>
 					</footer>
