--- a/html/settings.html
+++ b/html/settings.html
@@ -24,6 +24,7 @@
 						<ul>
 							<li><a href="#first" class="active">Welcome Page</a></li>
 							<li><a href="#second">Analytics</a></li>
+							<li><a href="#triangleFix">Triangle Indicator Fix</a></li>
 						</ul>
 					</nav>
 
@@ -44,6 +45,14 @@
 								<p>This extension sends analytics on usage including the time it takes for a sync to complete, when the extension is being used, and how long users ineract with the extension's pages. You can turn this tracking off using this setting. You must restart your browser for the change to take effect.</p>
 								<input type="checkbox" id="setting-disableAnalytics" name="setting-disableAnalytics">
 								<label for="setting-disableAnalytics">Disable analytics</label>
+							</section>
+							<section id="triangleFix" class="main">
+								<header class="major">
+									<h2>Triangle Indicator Fix</h2>
+								</header>
+								<p>In some areas of Mint, there is an expansion panel where the indicator functions counterintuitively. This setting enables a fix so that the indiacator for the panel appears expanded when it should.</p>
+								<input type="checkbox" id="setting-triangleFix" name="setting-triangleFix">
+								<label for="setting-triangleFix">Triangle Indicator Fix</label>
 							</section>
 					</div>
 
