--- a/html/settings.html
+++ b/html/settings.html
@@ -22,15 +22,15 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#first" class="active">Welcome Page</a></li>
-							<li><a href="#second">Analytics</a></li>
+							<li><a href="#welcome" class="active">Welcome Page</a></li>
+							<li><a href="#analytics">Analytics</a></li>
 							<li><a href="#triangleFix">Triangle Indicator Fix</a></li>
 						</ul>
 					</nav>
 
 				<!-- Main -->
 					<div id="main">
-							<section id="first" class="main">
+							<section id="welcome" class="main">
 								<header class="major">
 									<h2>Changelog</h2>
 								</header>
@@ -38,7 +38,7 @@
 								<input type="checkbox" id="setting-changelogOnUpdate" name="setting-changelogOnUpdate">
 								<label for="setting-changelogOnUpdate">Display changelog on update</label>
 							</section>
-							<section id="second" class="main">
+							<section id="analytics" class="main">
 								<header class="major">
 									<h2>Analytics</h2>
 								</header>
