Disable changelog on update by default

--- a/html/settings.html
+++ b/html/settings.html
@@ -33,7 +33,7 @@
 								<header class="major">
 									<h2>Changelog</h2>
 								</header>
-								<p>Toggle this setting off to turn off the changelog page on extension updates. This changelog shows information about the new features and changes introduced with the update.</p>
+								<p>Enable or disable the changelog page on extension updates. This changelog shows information about the new features and changes introduced with the update.</p>
 								<input type="checkbox" id="setting-changelogOnUpdate" name="setting-changelogOnUpdate">
 								<label for="setting-changelogOnUpdate">Display changelog on update</label>
 							</section>
