--- a/html/settings.html
+++ b/html/settings.html
@@ -51,8 +51,8 @@
 									<h2>Triangle Indicator Fix</h2>
 								</header>
 								<p>In some areas of Mint, there is an expansion panel where the indicator functions counterintuitively. This setting enables a fix so that the indiacator for the panel appears expanded when it should.</p>
-								<input type="checkbox" id="setting-triangleFix" name="setting-triangleFix">
-								<label for="setting-triangleFix">Triangle Indicator Fix</label>
+								<input type="checkbox" id="setting-fixTriangle" name="setting-fixTriangle">
+								<label for="setting-fixTriangle">Triangle Indicator Fix</label>
 							</section>
 					</div>
 
