--- a/html/settings.html
+++ b/html/settings.html
@@ -50,7 +50,7 @@
 								<header class="major">
 									<h2>Triangle Indicator Fix</h2>
 								</header>
-								<p>In some areas of Mint, there is an expansion panel where the indicator functions counterintuitively. This setting enables a fix so that the indiacator for the panel appears expanded when it should.</p>
+								<p>In some areas of Mint, there is an expansion panel where the indicator functions counterintuitively. This setting enables a fix so that the indicator for the panel appears expanded when it should.</p>
 								<input type="checkbox" id="setting-fixTriangle" name="setting-fixTriangle">
 								<label for="setting-fixTriangle">Triangle Indicator Fix</label>
 							</section>
