--- a/html/welcome.html
+++ b/html/welcome.html
@@ -95,8 +95,8 @@
 						<section>
 							<h2>Version History</h2>
 							<aside class="version">
-								<h4>Version 1.2.0</h4>
-								<p>This release is a bug fix for notification buttons not working.</p>
+								<h4>Version 1.3.0</h4>
+								<p>Added a fix for the triangle indicator in some areas of Mint. See <a href="https://github.com/pkmnct/robinhood-mint-sync-chrome/pull/7">pull request on GitHub</a> for more info. The changelog no longer shows on update by default. Analytics are no longer collected by default.</p>
 							</aside>
 							<ul class="actions">
 								<li><a href="changelog.html" class="button">View Full Changelog</a></li>
@@ -105,8 +105,8 @@
 						<section>
 							<h2>&nbsp;</h2>
 							<aside class="version">
-								<h4>Version 1.1.3</h4>
-								<p>Minor bug fixes. Detect when not logged in.</p>
+								<h4>Version 1.2.0</h4>
+								<p>This release is a bug fix for notification buttons not working.</p>
 							</aside>
 						</section>
 						<p class="copyright"><a href="licenses.html">View extension and third-party licenses</a></p>
