Update changelog message

--- a/html/changelog.html
+++ b/html/changelog.html
@@ -42,10 +42,10 @@
 							</section>
 							<section id="changelogPrompt" class="main special">
 								 <header class="minor">
- 									<h2>Don't want to see the changelog on updates?</h2>
+ 									<h2>Want to see the changelog on updates?</h2>
  								</header>
  								<ul class="actions special">
- 									<li><a href="settings.html" class="button">Turn it off</a></li>
+ 									<li><a href="settings.html" class="button">Toggle in settings</a></li>
  								</ul>
 							</section>
 
