--- a/html/changelog.html
+++ b/html/changelog.html
@@ -42,10 +42,10 @@
 							</section>
 							<section id="changelogPrompt" class="main special">
 								 <header class="minor">
- 									<h2>Don't want to see the changelog on updates?</h2>
+ 									<h2>Want to see the changelog on updates?</h2>
  								</header>
  								<ul class="actions special">
- 									<li><a href="settings.html" class="button">Turn it off</a></li>
+ 									<li><a href="settings.html" class="button">Toggle in settings</a></li>
  								</ul>
 							</section>
 
@@ -54,6 +54,10 @@
 								<header class="major">
 									<h2>Version History</h2>
 								</header>
+								<aside class="version">
+									<h4>Version 1.3.0</h4>
+									<p>Added a fix for the triangle indicator in some areas of Mint. See <a href="https://github.com/pkmnct/robinhood-mint-sync-chrome/pull/7">pull request on GitHub</a> for more info. The changelog no longer shows on update by default. Analytics are no longer collected by default.</p>
+								</aside>
 								<aside class="version">
 									<h4>Version 1.2.0</h4>
 									<p>Switched notifications to use a new library. This fixes issues with notification buttons.</p>
