--- a/html/changelog.html
+++ b/html/changelog.html
@@ -55,6 +55,10 @@
 									<h2>Version History</h2>
 								</header>
 								<aside class="version">
+									<h4>Version 2.0.0</h4>
+									<p>Fixed an issue where the Robinhood portfolio balance scrape was not working due to updates to their site. Removed Google Analytics.</p>
+								</aside>
+								<aside class="version">
 									<h4>Version 1.3.0</h4>
 									<p>Added a fix for the triangle indicator in some areas of Mint. See <a href="https://github.com/pkmnct/robinhood-mint-sync-chrome/pull/7">pull request on GitHub</a> for more info. The changelog no longer shows on update by default. Analytics are no longer collected by default.</p>
 								</aside>
