--- a/html/welcome.html
+++ b/html/welcome.html
@@ -95,8 +95,8 @@
 						<section>
 							<h2>Version History</h2>
 							<aside class="version">
-								<h4>Version 1.3.0</h4>
-								<p>Added a fix for the triangle indicator in some areas of Mint. See <a href="https://github.com/pkmnct/robinhood-mint-sync-chrome/pull/7">pull request on GitHub</a> for more info. The changelog no longer shows on update by default. Analytics are no longer collected by default.</p>
+								<h4>Version 2.0.0</h4>
+								<p>Fixed an issue where the Robinhood portfolio balance scrape was not working due to updates to their site. Removed Google Analytics.</p>
 							</aside>
 							<ul class="actions">
 								<li><a href="changelog.html" class="button">View Full Changelog</a></li>
@@ -105,8 +105,8 @@
 						<section>
 							<h2>&nbsp;</h2>
 							<aside class="version">
-								<h4>Version 1.2.0</h4>
-								<p>This release is a bug fix for notification buttons not working.</p>
+								<h4>Version 1.3.0</h4>
+								<p>Added a fix for the triangle indicator in some areas of Mint. See <a href="https://github.com/pkmnct/robinhood-mint-sync-chrome/pull/7">pull request on GitHub</a> for more info. The changelog no longer shows on update by default. Analytics are no longer collected by default.</p>
 							</aside>
 						</section>
 						<p class="copyright"><a href="licenses.html">View extension and third-party licenses</a></p>
@@ -122,7 +122,5 @@
 			<script src="../js/external/ajlkn/breakpoints.min.js"></script>
 			<script src="../js/external/stellar/util.js"></script>
 			<script src="../js/external/stellar/main.js"></script>
-			<script async src="https://www.googletagmanager.com/gtag/js?id=UA-118042537-2"></script>
-			<script src="../js/analytics.js"></script>
 	</body>
 </html>
