--- a/changelog.html
+++ b/changelog.html
@@ -48,6 +48,10 @@
 									<h2>Version History</h2>
 								</header>
 								<aside class="version">
+									<h4>Version 2.0.0</h4>
+									<p>Fixed an issue where the Robinhood portfolio balance scrape was not working due to updates to their site. Removed Google Analytics.</p>
+								</aside>
+								<aside class="version">
 									<h4>Version 1.2.0</h4>
 									<p>Switched notifications to use a new library. This fixes issues with notification buttons.</p>
 								</aside>
