--- a/public/html/changelog.html
+++ b/public/html/changelog.html
@@ -39,7 +39,11 @@
                 <h2>What's new in this release</h2>
               </header>
               <p>
-                This release is a bug fix for notification buttons not working.
+                Robinhood scraping has been improved, and will now show up as
+                separate properties in Mint for each type of asset. A bug with
+                the Robinhood login page detection has been resolved. Various
+                code improvements to facilitate faster development in the
+                future.
               </p>
             </div>
           </div>
@@ -60,6 +64,15 @@
           <header class="major">
             <h2>Version History</h2>
           </header>
+          <aside class="version">
+            <h4>Version 3.0.0</h4>
+            <p>
+              Robinhood scraping has been improved, and will now show up as
+              separate properties in Mint for each type of asset. A bug with the
+              Robinhood login page detection has been resolved. Various code
+              improvements to facilitate faster development in the future.
+            </p>
+          </aside>
           <aside class="version">
             <h4>Version 2.0.0</h4>
             <p>
