--- a/public/html/licenses.html
+++ b/public/html/licenses.html
@@ -29,6 +29,7 @@
           <li><a href="#third">jQuery License</a></li>
           <li><a href="#fourth">NOTY License</a></li>
           <li><a href="#fifth">Stellar Theme License</a></li>
+          <li><a href="#other">Other Licenses</a></li>
         </ul>
       </nav>
 
@@ -569,6 +570,20 @@
               restrict the license of any rights under applicable law.
             </li>
           </ol>
+        </section>
+        <section id="other" class="main">
+          <header class="major">
+            <h2>Other Licenses</h2>
+          </header>
+          <p>
+            This extension contains additional dependencies. See each of the
+            dependencies
+            <a
+              href="https://github.com/pkmnct/robinhood-mint-sync-chrome/blob/master/package.json"
+              >on GitHub in the package.json file</a
+            >. Their licenses can be viewed on
+            <a href="https://www.npmjs.com/">NPM</a>.
+          </p>
         </section>
       </div>
 
