--- a/index.html
+++ b/index.html
@@ -121,9 +121,14 @@
 						<section>
 							<h2>Version History</h2>
 							<aside class="version">
-								<h4>Version 2.0.0</h4>
-								<p>Fixed an issue where the Robinhood portfolio balance scrape was not working due to updates to their site. Removed Google Analytics.</p>
-							</aside>
+								<h4>Version 3.0.0</h4>
+								<p>
+							Robinhood scraping has been improved, and will now show up as
+							separate properties in Mint for each type of asset. A bug with
+							the Robinhood login page detection has been resolved. Various
+							code improvements to facilitate faster development in the
+							future.
+							</p></aside>
 							<ul class="actions">
 								<li><a href="changelog.html" class="button">View Full Changelog</a></li>
 							</ul>
@@ -131,8 +136,8 @@
 						<section>
 							<h2>&nbsp;</h2>
 							<aside class="version">
-								<h4>Version 1.2.0</h4>
-								<p>This release is a bug fix for notification buttons not working.</p>
+								<h4>Version 2.0.0</h4>
+								<p>Fixed an issue where the Robinhood portfolio balance scrape was not working due to updates to their site. Removed Google Analytics.</p>
 							</aside>
 						</section>
 						<p class="copyright"><a href="licenses.html">View extension and third-party licenses</a></p>
