Move changelog link to github pages

--- a/public/html/welcome.html
+++ b/public/html/welcome.html
@@ -126,7 +126,7 @@
 						future.</p>
 				</aside>
 				<ul class="actions">
-					<li><a href="changelog.html" class="button">View Full Changelog</a></li>
+					<li><a href="https://pkmnct.github.io/robinhood-mint-sync-chrome/changelog.html" class="button">View Full Changelog</a></li>
 				</ul>
 			</section>
 			<section>
