Add checkbox for debug mode

--- a/public/html/settings.html
+++ b/public/html/settings.html
@@ -66,6 +66,22 @@
           />
           <label for="setting-fixTriangle">Triangle Indicator Fix</label>
         </section>
+        <section id="debugMode" class="main">
+          <header class="major">
+            <h2>Debug Mode</h2>
+          </header>
+          <p>
+            Enables logging and disables closing of Robinhood/Mint extension
+            windows for debugging purposes. To see the logs, enable developer
+            mode in Chrome and inspect the background page of the extension.
+          </p>
+          <input
+            type="checkbox"
+            id="setting-debugMode"
+            name="setting-debugMode"
+          />
+          <label for="setting-debugMode">Debug Mode</label>
+        </section>
       </div>
 
       <!-- Footer -->
