Remove version information from welcome

--- a/public/html/welcome.html
+++ b/public/html/welcome.html
@@ -174,35 +174,15 @@
       <footer id="footer">
         <section>
           <h2>Version History</h2>
-          <aside class="version">
-            <h4>Version 3.0.0</h4>
-            <p>
-              Robinhood scraping has been improved, and will now show up as
-              separate properties in Mint for each type of asset. A bug with the
-              Robinhood login page detection has been resolved. Various code
-              improvements to facilitate faster development in the future.
-            </p>
-          </aside>
           <ul class="actions">
             <li>
               <a
                 href="https://pkmnct.github.io/robinhood-mint-sync-chrome/changelog.html"
                 class="button"
-                >View Full Changelog</a
+                >View Changelog</a
               >
             </li>
           </ul>
-        </section>
-        <section>
-          <h2>&nbsp;</h2>
-          <aside class="version">
-            <h4>Version 2.0.0</h4>
-            <p>
-              Fixed an issue where the Robinhood portfolio balance scrape was
-              not working due to updates to their site. Removed Google
-              Analytics.
-            </p>
-          </aside>
         </section>
         <p class="copyright">
           <a href="licenses.html">View extension and third-party licenses</a>
