--- a/index.html
+++ b/index.html
@@ -228,12 +228,13 @@
         <section>
           <h2>Version History</h2>
           <aside class="version">
-            <h4>Version 3.0.0</h4>
+            <h4>Version 3.1.0</h4>
             <p>
-              Robinhood scraping has been improved, and will now show up as
-              separate properties in Mint for each type of asset. A bug with the
-              Robinhood login page detection has been resolved. Various code
-              improvements to facilitate faster development in the future.
+              Fixed race condition in Mint update script where save callback
+              could be called before it was initialized. Added a debug mode to
+              facilitate debugging and support. This mode will log to either the
+              background script or the console on the pages where content
+              scripts are running.
             </p>
           </aside>
           <ul class="actions">
@@ -245,11 +246,12 @@
         <section>
           <h2>&nbsp;</h2>
           <aside class="version">
-            <h4>Version 2.0.0</h4>
+            <h4>Version 3.0.0</h4>
             <p>
-              Fixed an issue where the Robinhood portfolio balance scrape was
-              not working due to updates to their site. Removed Google
-              Analytics.
+              Robinhood scraping has been improved, and will now show up as
+              separate properties in Mint for each type of asset. A bug with the
+              Robinhood login page detection has been resolved. Various code
+              improvements to facilitate faster development in the future.
             </p>
           </aside>
         </section>
