--- a/changelog.html
+++ b/changelog.html
@@ -7,9 +7,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
-    <link rel="stylesheet" href="/css/stellar.css" />
+    <link rel="stylesheet" href="css/stellar.css" />
     <noscript
-      ><link rel="stylesheet" href="/css/stellar-noscript.css"
+      ><link rel="stylesheet" href="css/stellar-noscript.css"
     /></noscript>
   </head>
   <body class="is-preload">
@@ -155,12 +155,12 @@
     </div>
 
     <!-- Scripts -->
-    <script src="/js/external/jquery/jquery.min.js"></script>
-    <script src="/js/external/ajlkn/jquery.scrollex.min.js"></script>
-    <script src="/js/external/ajlkn/jquery.scrolly.min.js"></script>
-    <script src="/js/external/ajlkn/browser.min.js"></script>
-    <script src="/js/external/ajlkn/breakpoints.min.js"></script>
-    <script src="/js/external/stellar/util.js"></script>
-    <script src="/js/external/stellar/main.js"></script>
+    <script src="js/external/jquery/jquery.min.js"></script>
+    <script src="js/external/ajlkn/jquery.scrollex.min.js"></script>
+    <script src="js/external/ajlkn/jquery.scrolly.min.js"></script>
+    <script src="js/external/ajlkn/browser.min.js"></script>
+    <script src="js/external/ajlkn/breakpoints.min.js"></script>
+    <script src="js/external/stellar/util.js"></script>
+    <script src="js/external/stellar/main.js"></script>
   </body>
 </html>
