Update "What's New"

--- a/changelog.html
+++ b/changelog.html
@@ -39,11 +39,8 @@
                 <h2>What's new in this release</h2>
               </header>
               <p>
-                Robinhood scraping has been improved, and will now show up as
-                separate properties in Mint for each type of asset. A bug with
-                the Robinhood login page detection has been resolved. Various
-                code improvements to facilitate faster development in the
-                future.
+                Bug fix for Mint update script where save callback could be
+                called before it was initialized. New debugging functionality.
               </p>
             </div>
           </div>
