Update what's new

--- a/changelog.html
+++ b/changelog.html
@@ -39,8 +39,8 @@
                 <h2>What's new in this release</h2>
               </header>
               <p>
-                Bug fix for Mint update script where save callback could be
-                called before it was initialized. New debugging functionality.
+                Additional bug fixes for issues reported from 3.0.0. New Debug
+                Mode setting.
               </p>
             </div>
           </div>
